--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -88,7 +88,7 @@
         <div class="text-center">
             <h2>Ready to start?</h2>
             <p>Join, create, or schedule your meeting today.</p>
-            <a href="#" class="btn btn-primary">Join a Meeting</a>
+            <a href="{{url_for('join')}}" class="btn btn-primary">Join a Meeting</a>
             <a href="{{url_for('create_meeting')}}" class="btn btn-secondary">Create/Schedule Meeting</a>
         </div>
     </section>
