--- a/templates/join.html
+++ b/templates/join.html
@@ -62,12 +62,13 @@
 <body>
     <div class="container">
         <h1 class="text-center mt-5">Join Meeting</h1>
-        <form action="{{url_for('join')}}" class="mt-4" method="post">
+        <form action="{{ url_for('join') }}" class="mt-4" method="post">
             <div class="form-group">
-                <input type="text" placeholder="Room ID" class="form-control" id="roomID" required>
+                <input type="text" placeholder="Room ID" class="form-control" id="meeting_ID" name="meeting_ID" required>
             </div>
             <button type="submit" class="btn btn-primary btn-lg">Join</button>
         </form>
+        
     </div>
 </body>
 
