changes in dashboard

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -44,11 +44,11 @@
         <div class="features-grid">
             <!-- Top Row -->
             <div class="feature-container">
-                <img src="../static/assests/Add Video Call.png" alt="High-Quality Video" class="feature-image">
+                <img src="../static/assests/videocall.png" alt="High-Quality Video" class="feature-image">
                 <div class="feature-description">Experience crystal-clear video in every meeting.</div>
             </div>
             <div class="feature-container">
-                <img src="../static/assests/breakout-rooms.png" alt="Collaboration Tools" class="feature-image">
+                <img src="../static/assests/breakoutrooms.png" alt="Collaboration Tools" class="feature-image">
                 <div class="feature-description">Collaborate effectively with integrated tools.</div>
             </div>
             <div class="feature-container">
@@ -58,7 +58,7 @@
 
             <!-- Middle Row -->
             <div class="feature-container middle">
-                <img src="../static/assests/meeting-recording.png" alt="Global Access" class="feature-image">
+                <img src="../static/assests/videorecording.png" alt="Global Access" class="feature-image">
                 <div class="feature-description">Join from anywhere in the world on any device.</div>
             </div>
             <div class="feature-container middle">
