screen share is not working

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -23,10 +23,11 @@
                     <a class="nav-link" href="{{url_for('join') }}">Join Meeting</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{url_for('create_meeting') }}">Create Meeting</a>
+                    <!-- <a class="nav-link" href="{{url_for('create_meeting') }}">Create Meeting</a> -->
+                    <a class="nav-link" href="{{url_for('create') }}">Create/Schedule Meeting</a>
                 </li>
                 <li class="nav-link">
-                    <a href="{{url_for('schedule') }}">Scheduled Meetings</a>
+                    <a href="{{url_for('schedule_meeting') }}">Scheduled Meetings</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{url_for('logout') }}">Logout</a>
