--- a/templates/Login.html
+++ b/templates/Login.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="../static/script.js"></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-    <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
+    <!-- <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script> -->
 </head>
 
 <body>
@@ -42,8 +42,8 @@
                                 <input type="password" placeholder="Enter your password" name="password" required>
                             </div>
                             <div class="text"><a href="#">Forgot password?</a></div>
-                            <div class="g-recaptcha" data-sitekey="6LcrrwkqAAAAACLgp3vY5oeUiiuPv4wSRiEXSXxG"
-                                id="recaptcha"></div>
+                            <!-- <div class="g-recaptcha" data-sitekey="6LcrrwkqAAAAACLgp3vY5oeUiiuPv4wSRiEXSXxG"
+                                id="recaptcha"></div> -->
                             <div id="recaptcha-error" style="color: red; display: none;">Please complete the reCAPTCHA.
                             </div>
                             <div class="button input-box">
